manifests-failed/actions-runner-controller-0.23.7.tgz-manifest.yaml
---
# Source: actions-runner-controller/templates/controller.metrics.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: actions-runner-controller-0.23.7
    app.kubernetes.io/name: actions-runner-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.27.6"
    app.kubernetes.io/managed-by: Helm
  name: my-release-actions-runner-controller-metrics-service
  namespace: actions-runner-controller-0.23.7.tgz
spec:
  ports:
  - name: metrics-port
    port: 8443
    targetPort: metrics-port
  selector:
    app.kubernetes.io/name: actions-runner-controller
    app.kubernetes.io/instance: my-release
---
# Source: actions-runner-controller/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-actions-runner-controller-webhook
  namespace: actions-runner-controller-0.23.7.tgz
  labels:
    helm.sh/chart: actions-runner-controller-0.23.7
    app.kubernetes.io/name: actions-runner-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.27.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: actions-runner-controller
    app.kubernetes.io/instance: my-release
---
# Source: actions-runner-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-actions-runner-controller
  namespace: actions-runner-controller-0.23.7.tgz
  labels:
    helm.sh/chart: actions-runner-controller-0.23.7
    app.kubernetes.io/name: actions-runner-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.27.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: actions-runner-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actions-runner-controller
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-actions-runner-controller
      securityContext:
        {}
      containers:
      - args:
        - "--metrics-addr=127.0.0.1:8080"
        - "--enable-leader-election"
        - "--port=9443"
        - "--sync-period=1m"
        - "--default-scale-down-delay=10m"
        - "--docker-image=docker:dind"
        - "--runner-image=summerwind/actions-runner:latest"  
        - "--log-format=text"
        command:
        - "/manager"
        image: "summerwind/actions-runner-controller:v0.27.6"
        name: manager
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        resources:
            {}
        securityContext:
            {}
        volumeMounts:
        - mountPath: "/etc/actions-runner-controller"
          name: secret
          readOnly: true
        - mountPath: /tmp
          name: tmp
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - "--secure-listen-address=0.0.0.0:8443"
        - "--upstream=http://127.0.0.1:8080/"
        - "--logtostderr=true"
        - "--v=10"
        image: "quay.io/brancz/kube-rbac-proxy:v0.13.1"
        name: kube-rbac-proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
          name: metrics-port
        resources:
            {}
        securityContext:
            {}
      terminationGracePeriodSeconds: 10
      volumes:
      - name: secret
        secret:
          secretName: controller-manager
      - name: cert
        secret:
          defaultMode: 420
          secretName: my-release-actions-runner-controller-serving-cert
      - name: tmp
        emptyDir: {}
---
# Source: actions-runner-controller/templates/ci-secret.yaml
# This template only exists to facilitate CI testing of the chart, since
# a secret is expected to be found in the namespace by the controller manager
---
# Source: actions-runner-controller/templates/webhook_configs.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: my-release-actions-runner-controller-mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: actions-runner-controller-0.23.7.tgz/my-release-actions-runner-controller-serving-cert
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /mutate-actions-summerwind-dev-v1alpha1-runner
  failurePolicy: Fail
  name: mutate.runner.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runners
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /mutate-actions-summerwind-dev-v1alpha1-runnerdeployment
  failurePolicy: Fail
  name: mutate.runnerdeployment.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerdeployments
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /mutate-actions-summerwind-dev-v1alpha1-runnerreplicaset
  failurePolicy: Fail
  name: mutate.runnerreplicaset.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerreplicasets
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /mutate-runner-set-pod
  failurePolicy: Fail
  name: mutate-runner-pod.webhook.actions.summerwind.dev
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  objectSelector:
    matchLabels:
      "actions-runner-controller/inject-registration-token": "true"
  timeoutSeconds: 10
---
# Source: actions-runner-controller/templates/webhook_configs.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: my-release-actions-runner-controller-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: actions-runner-controller-0.23.7.tgz/my-release-actions-runner-controller-serving-cert
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /validate-actions-summerwind-dev-v1alpha1-runner
  failurePolicy: Fail
  name: validate.runner.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runners
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /validate-actions-summerwind-dev-v1alpha1-runnerdeployment
  failurePolicy: Fail
  name: validate.runnerdeployment.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerdeployments
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: my-release-actions-runner-controller-webhook
      namespace: actions-runner-controller-0.23.7.tgz
      path: /validate-actions-summerwind-dev-v1alpha1-runnerreplicaset
  failurePolicy: Fail
  name: validate.runnerreplicaset.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerreplicasets
  sideEffects: None
